--- a/Data_Royale_Analyzing_PUBG_With_Data Science.ipynb
+++ b/Data_Royale_Analyzing_PUBG_With_Data Science.ipynb
@@ -68,26 +68,14 @@
       "metadata": {
         "colab_type": "code",
         "id": "9kye97CLdYIW",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 33
-        },
-        "outputId": "22349d3c-c70e-4861-d6f7-1789608b2d52"
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -138,11 +126,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "FL0_kmDpfAqP",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        },
-        "outputId": "f9981790-c8e5-4c32-fffe-a6e69d77f547"
+        "colab": {}
       },
       "source": [
         "# Importing the required libraries for this project\n",
@@ -155,16 +139,7 @@
         "warnings.filterwarnings(\"ignore\")"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
